fixes font-size to prevent zoom on mobile

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -82,6 +82,7 @@ button {
 
 .task-text {
   flex: 1;
+  font-size: 16px;
   font-weight: 300;
 }
 
